MDEV-29050: Fixing MDEV-29050: '[ERROR] InnoDB: Cannot open datafile for read-only: './db/t1.ibd' OS error: 71'.

The Problem
===========
When restoring a sparse backup (a backup executed with --tables or --tables-file) we execute
'mariabackup --prepare --export ...'. For certain restores we see a number of errors like the
following:
[ERROR] InnoDB: Cannot open datafile for read-only: './db/t1.ibd' OS error: 71

All the errors are relevant to tables that were not specified in the sparse backup.
For example, if we have two tables t1 and t2 and if we do,
'mariabackup --backup --tables=t2 ....' and to restore if we execute
'mariabackup --prepare --export ...', then, we get an error relevant to t1.
Also, note that the datafiles for unspecified (in the sparse backup) tables are not present in the backup.

Expected Behaviour
==================
'mariabackup --prepare --export ...' should be executed without errors for sparse backups.

The Cause
=========
During 'mariabackup --prepare --export', the recovery code inside
innodb goes through undo log records and attempts to resurrect
transactions. However, for backups, we do not need to recover transactions. For backups
it is sufficient to work with redo logs and data files. This logic is already implemented
for SRV_OPERATION_RESTORE but not implemented for SRV_OPERATION_RESTORE_EXPORT. Hence, SRV_OPERATION_RESTORE_EXPORT
attempts to recover pending transactions.

The Fix
=======
Apply same logic to SRV_OPERATION_RESTORE_EXPORT as for SRV_OPERATION_RESTORE.